# kleva

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  docker-smoke.yml
docker/: entrypoint.sh
docker/smoke/: lucky.c  lucky.h
docs/: ast-ir.md  augment-rules.md  frama-c-inspired-static-analysis.md  helper-call-rules.md  modules.md  plan.md  usage.md
src/kleva/: acsl.py  acsl_contract.py  augment.py  bodygen.py  builder.py  cli.py  codegen.py  config.py  coverage_report.py  eva.py  klee.py  ktest.py  pipeline.py  quality_report.py  recipe.py  refiner.py  (+6 more)
tests/: test_acsl_contract.py  test_acsl_parser.py  test_ast_parser.py  test_bodygen.py  test_builder.py  test_codegen.py  test_config.py  test_coverage_report.py  test_eva.py  test_fixture_buffers.py  test_fixture_construction.py  test_ir_aliases.py  test_ir_clang_json.py  test_ir_naming.py  test_ir_relations.py  test_ir_render.py  test_ir_walk.py  test_kernel_program.py  test_klee.py  test_pipeline.py  test_quality_report.py  test_recipe.py  test_shaping_assumptions.py  test_shaping_branches.py  test_shaping_byte_order.py  test_shaping_callees.py  test_shaping_conditions.py  test_shaping_diversity.py  test_shaping_equivalence.py  test_shaping_ir_buffers.py  test_shaping_ir_byte_order.py  test_shaping_ir_callbacks.py  test_shaping_ir_callees.py  test_shaping_ir_conditions.py  test_shaping_ir_helper_effects.py  test_shaping_ir_lookups.py  test_shaping_ir_nullability.py  test_shaping_ir_ownership.py  test_shaping_ir_parsers.py  test_shaping_ir_poststate.py  (+13 more)
(+50 files in other folders)
