[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kleva"
version = "0.1.0"
description = "Automatic C unit-test generation with KLEE inputs and Frama-C EVA-proven assertion oracles"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "EhsunHighway" },
]
dependencies = [
    "pyyaml>=6.0",
]
keywords = ["klee", "frama-c", "eva", "acsl", "testing", "symbolic-execution"]

[project.scripts]
kleva = "kleva.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
